--- a/css/main.css
+++ b/css/main.css
@@ -81,3 +81,19 @@
     }
     
 }
+
+#imagelightbox {
+    position: fixed;
+    z-index: 9999;
+    -ms-touch-action: none;
+    touch-action: none;
+}
+#imagelightbox-overlay{
+    background-color: rgba( 0, 0, 0, .7 );
+    position: fixed;
+    z-index: 9998;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
