--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,34 @@ a:hover {
     height: 2px;
     background: #239b3a;
 }
+.site-section-heading-product {
+    font-size: 30px;
+    position: relative;
+    padding-bottom: 20px;
+}
+.site-section-heading-product:before {
+    content: "";
+    left: 0%;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: #239b3a;
+}
+.site-section-heading-title {
+    font-size: 30px;
+    position: relative;
+    padding-bottom: 10px;
+}
+.site-section-heading-title:before {
+    content: "";
+    left: 0%;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background: #239b3a;
+}
 
 .site-section-heading.text-center:before {
     content: "";
